--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.security.user.password=ss
 
 spring.datasource.url= jdbc:mysql://localhost:3306/nouvell?createDatabaseIfNotExist=true
 spring.datasource.username= root
-spring.datasource.password= REDERE2004
+spring.datasource.password= 12345678
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
