--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=adaouisalah552@gmail.com
+spring.mail.password=idfgttfzfmqytnms
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
